Testsuite/ManualTests/2918/2918.c.lcov
    1|       |/* Functional tests for the function hotpatching feature.  */
    2|       |
    3|       |/* { dg-do compile } */
    4|       |/* { dg-options "-O3 -mzarch" } */
    5|       |
    6|       |__attribute__((hotpatch(0))) int
    7|      1|main(void) { /* { dg-error "wrong number of arguments specified" } */
    8|      1|  return 0;
    9|      1|}

